ver 1.1.1 修改警告，完善代码